--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -11,12 +9,12 @@
 		<version>1.5.20.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.hp</groupId>
+	<groupId>com.rest.java</groupId>
 	<artifactId>hospital-test-application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>hospital-test-application</name>
-	<description>Demo project for Spring Boot</description>
+	<description>hospital rest service</description>
 
 	<properties>
 		<java.version>1.8</java.version>
