database properties added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ server.port=8088
 
 spring.jpa.show-sql=true
 
+#heroku postgresql properties
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 #logging.level.root=INFO
 #logging.level.org.org.org.springframework.web=ERROR
 #logging.level.com.rest.java=DEBUG
